-
Bug
-
Resolution: Done
-
P1: Critical
-
6.1
-
None
-
1
-
c0cbf499b9a261918afee1fad27ae8cfde82a42b
-
Qt Quick 3D - 2021 Week 11/12
Currently Attractor3D doesn't work properly when located outside the particle system. Fix this and also modify the testbed example to test it.
For Gerrit Dashboard: QTBUG-92019 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
340013,4 | Fix Attractor3D on node tree | dev | qt/qtquick3d | Status: MERGED | +2 | 0 |
340667,2 | Fix Attractor3D on node tree | 6.1 | qt/qtquick3d | Status: MERGED | +2 | 0 |