Fix Attractor3D on node tree

Attractor also needs to take into account the node transformation.
For this, move node transformation helpers from emitter into utils.
Also a small fix still into emitter velocity, only include the
rotation of the node transformation and not the whole transformation.

Modify attractor example to better test these.

Task-number: QTBUG-92019
Change-Id: Ic08b380a313fc74b36e59d6e5a06db5b78330e53
Reviewed-by: Antti Määttä <antti.maatta@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
Reviewed-by: Andy Nichols <andy.nichols@qt.io>
(cherry picked from commit 7b71caf544884f1e082ad57fa99bc53352f066c0)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>